--- a/src/components/Member/MovieForm/_movieForm.scss
+++ b/src/components/Member/MovieForm/_movieForm.scss
@@ -1,3 +1,16 @@
+.moviePrompt {
+  display: block;
+  width: 300px;
+  height: 30px;
+  margin: 40px auto 0 auto;
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  line-height: 30px;
+  font-size: 120%;
+  color: #000000;
+}
+
 .movieSearchResults {
   width: 90%;
   margin: 0 auto;
