--- a/src/components/Home/_home.scss
+++ b/src/components/Home/_home.scss
@@ -1,11 +1,15 @@
-.news, .movieList {
-  width: 60%;
-  margin: 10px auto;
-  min-height: 200px;
-  background-color: #d3d3d3;
-  border-radius: 10px;
-  box-shadow: 7px 7px 5px #888888;
+.feedContainer {
+  width: 98%;
 }
+
+// .news, .movieList {
+//   width: 60%;
+//   margin: 10px auto;
+//   min-height: 200px;
+//   background-color: #d3d3d3;
+//   border-radius: 10px;
+//   box-shadow: 7px 7px 5px #888888;
+// }
 
 .newsTitle, .movieListTitle {
   font-family: 'Ultra', serif;
@@ -18,7 +22,8 @@
 }
 
 .newsItem {
-  background-color: #Ffffff;
+  background-color: #d3d3d3;
+  max-height: 300px;
   border-radius: 10px;
   margin: 10px;
   padding: 10px;
@@ -26,7 +31,7 @@
 }
 
 .newsItem .fi-image{
-  width: 100%;
+  max-height: 300px;
 }
 
 .movieList {
