--- a/src/components/Member/ReviewForm/_reviewForm.scss
+++ b/src/components/Member/ReviewForm/_reviewForm.scss
@@ -22,9 +22,9 @@
   .ql-editor {
     
     p {
-      font-family: 'Bellefair', serif;
+      font-family: 'Open Sans', sans-serif;      
       margin: 25px auto;
-      font-size: 150%;
+      font-size: 130%;
     }
 
     h2 {
@@ -36,7 +36,7 @@
     }
 
     blockquote {
-      font-family: 'Bellefair', serif;
+      font-family: 'Open Sans', sans-serif;
       font-size: 200%;
       margin-left: 40px;
       padding-left: 16px;
