--- a/src/components/Review/_review.scss
+++ b/src/components/Review/_review.scss
@@ -24,15 +24,16 @@
     width: 40%;
     border-bottom: 2px solid #D54B97;
     font-family: 'Saira', sans-serif;
-    font-size: 170%;
+    font-size: 130%;
     margin: 30px 0;
   }
 
   p {
     display: block;
     margin: 25px auto;
-    font-family: 'bellefair', serif;
-    font-size: 150%;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 25px;
+    font-size: 105%;
   }
 
   blockquote {
@@ -40,7 +41,7 @@
     border-bottom: 5px;
     margin-top: 5px;
     padding-left: 16px;
-    font-family: 'Bellefair', serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 200%;
   }
 }
