--- a/src/components/App/_app.scss
+++ b/src/components/App/_app.scss
@@ -1,3 +1,18 @@
+.app.container {
+  .copyright {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    text-align: center;
+    font-size: 150%;
+    width: 100%;
+    padding: 10px 0;
+    font-family: 'Libre Barcode 39 Text', sans-serif;
+    background-color: #01ffc4;
+    color: #304F4E;
+  }
+}
+
 .navigationMenu {
   position: fixed;
   z-index: 4;
