--- a/src/components/Member/ReviewForm/_reviewForm.scss
+++ b/src/components/Member/ReviewForm/_reviewForm.scss
@@ -16,28 +16,58 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+.genres {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
 .editor-container {
   background-color: #ffffff;
+  width: 95%;
+  margin: 0 auto;
+  min-height: 250px;
+  height: auto;
+
+  .quill {
+    width: 100%;
+  }
+
+  .ql-snow {
+    border: none;
+  }
+
+  .ql-toolbar.ql-snow {
+    border-bottom: 1px solid #a9a9a9 !important;
+  }
 
   .ql-editor {
-    
+
     p {
       font-family: 'Open Sans', sans-serif;      
       margin: 25px auto;
       font-size: 130%;
+
+      img {
+        display: block;
+        width: 70%;
+        margin: 0 auto;
+      }
     }
 
     h2 {
       width: 40%;
       border-bottom: 2px solid #D54B97;
       font-family: 'Saira', sans-serif;
-      font-size: 170%;
+      font-size: 25px;
       margin: 30px 0;
     }
 
     blockquote {
       font-family: 'Open Sans', sans-serif;
-      font-size: 200%;
+      font-size: 170%;
       margin-left: 40px;
       padding-left: 16px;
     }
