--- a/src/components/Member/_member.scss
+++ b/src/components/Member/_member.scss
@@ -1,19 +1,32 @@
 .member {
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  margin-left: calc(-90%/2);
   width: 90%;
-  min-height: calc(100vh - 300px);
-  margin: 0 auto 0 auto;
+  min-height: calc(100vh - 400px);
   background-color: #d3d3d3;
   border-radius: 10px;
-  box-shadow: 7px 7px 5px #888888;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: 0.5s ease-in-out;
+}
 
-  .username {
-    font-family: 'Saira', sans-serif;
-    font-size: 120%;
-    color: #d3d3d3;
-    padding: 10px;
-    background-color: #304F4E;
-    border-radius: 10px 10px 0 0;
-  }
+.movieFormActive {
+  position: absolute;
+  top: 125px;
+  left: 50%;
+  margin-left: calc(-90%/2);
+  min-height: calc(100vh - 250px);
+  transition: 0.5s ease-in-out;
+}
+
+.username {
+  font-family: 'Saira', sans-serif;
+  font-size: 120%;
+  color: #d3d3d3;
+  padding: 10px;
+  background-color: #304F4E;
+  border-radius: 10px 10px 0 0;
 }
 
 .login {
@@ -53,7 +66,7 @@
   #loginForm {
     background-color: #ffffff;
     max-width: 500px;
-    min-height: 300px;
+    min-height: 250px;
     margin: 10px auto;
     border-radius: 15px;
 
@@ -90,6 +103,7 @@
     h3 {
       font-family: 'Saira', sans-serif;
       text-align: center;
+      padding-top: 30px;
       height: 40px;
       line-height: 40px;
     }
