--- a/src/components/Member/ReviewForm/_reviewForm.scss
+++ b/src/components/Member/ReviewForm/_reviewForm.scss
@@ -52,8 +52,11 @@
 
       img {
         display: block;
-        width: 70%;
-        margin: 0 auto;
+        width: 90%;
+        margin: 0 auto 5px auto;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        border: thin solid #a9a9a9;
+        border-radius: 5px;
       }
     }
 
