--- a/src/components/Review/_review.scss
+++ b/src/components/Review/_review.scss
@@ -34,6 +34,7 @@
     font-family: 'Open Sans', sans-serif;
     line-height: 25px;
     font-size: 105%;
+    overflow-wrap: normal;
   }
 
   blockquote {
@@ -43,5 +44,6 @@
     padding-left: 16px;
     font-family: 'Open Sans', sans-serif;
     font-size: 200%;
+    overflow-wrap: normal;
   }
 }
