--- a/src/components/Member/MovieForm/_movieForm.scss
+++ b/src/components/Member/MovieForm/_movieForm.scss
@@ -1,8 +1,35 @@
+.promptMenu {
+  display: flex;
+  height: 50px;
+  margin: 30px auto;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+
+  .cancelBtn {
+    margin: 10px;
+    border: none;
+    background: none;
+    outline: none;
+    height: 30px;
+    width: 30px;
+
+    i {
+      font-size: 200%;
+      color: #F08080;
+      border-radius: 10px;
+    }
+
+    i:hover {
+      color: #FF0000;
+    }
+  }
+}
+
 .moviePrompt {
-  display: block;
-  width: 300px;
+  min-width: 300px;
   height: 30px;
-  margin: 40px auto 0 auto;
   outline: none;
   border: none;
   border-radius: 10px;
@@ -12,7 +39,7 @@
 }
 
 .movieSearchResults {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -21,7 +48,7 @@
 }
 
 .movieSearchListItem {
-  width: 25%;
+  width: calc(33% - 50px);
   background-color: #000000;
   color: #d3d3d3;
   float: left;
