--- a/src/components/Member/ReviewForm/_reviewForm.scss
+++ b/src/components/Member/ReviewForm/_reviewForm.scss
@@ -14,6 +14,39 @@
   height: 100vh;
   overflow-y: auto;
   background-color: rgba(0, 0, 0, 0.5);
+  
+  .previewMenu {
+    position: fixed;
+    width: 100%;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 10px;
+    height: 50px;
+    box-shadow: 0 4px 2px -2px gray;
+
+    button {
+      margin: 0 15px;
+      background: none;
+      outline: none;
+      border: none;
+      display: flex;
+      flex-direction: column;
+
+      i {
+        font-size: 200%;
+        margin: 0 auto;
+      }
+
+      .cancelPreviewBtn {
+        color: #F08080;
+      }
+      .submitReviewBtn {
+        color: #98FB98;
+      }
+    }
+  }
 }
 
 .genres {
