--- a/src/components/App/_app.scss
+++ b/src/components/App/_app.scss
@@ -1,6 +1,6 @@
 .app.container {
   .copyright {
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     text-align: center;
