--- a/src/components/shared/Menu/menu.scss
+++ b/src/components/shared/Menu/menu.scss
@@ -12,14 +12,28 @@
 
 .searchBar {
   width: 250px;
-  line-height: 40px;
+  height: 30px;
+  margin-top: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  background-color: #fff;
+  border-radius: 5px;
+
+  i {
+    height: 20px;
+    margin: 5px;
+    color: #304F4E;
+  }
 
   #searchInput {
     font-family: 'Saira', sans-serif;
     width: 100%;
-    height: 60%;
+    height: 20px;
+    line-height: 20px;
+    margin: 5px 0 5px 0;
     font-size: 100%;
-    border-radius: 5px;
+    background: none;
     outline: none;
     border: none;
     line-height: 100%;
