--- a/src/components/App/_app.scss
+++ b/src/components/App/_app.scss
@@ -7,6 +7,7 @@
     font-size: 150%;
     width: 100%;
     padding: 10px 0;
+    margin-top: auto;
     font-family: 'Libre Barcode 39 Text', sans-serif;
     background-color: #01ffc4;
     color: #304F4E;
