--- a/src/components/App/_app.scss
+++ b/src/components/App/_app.scss
@@ -30,13 +30,13 @@
   padding-top: 50px;
 
   .navItem {
-    border: 2px solid #3a3a3a;
     border-radius: 15px;
     text-align: center;
     padding-top: 5px;
     margin: 0 50px;
     height: 95px;
     width: 100px;
+    background-color: rgba(255, 255, 255, 0.4);
 
     h4 {
       color: #3a3a3a;
@@ -55,4 +55,14 @@
   opacity: 1.0 !important;
   z-index: 6 !important;
   transition: 0.3s ease-in-out;
+}
+
+#bottom-color {
+  position: fixed;
+  bottom: -100px;
+  left: 0;
+  z-index: 7 !important;
+  width: 100vw;
+  height: 100px;
+  background-color: #2CFEC5;
 }
