--- a/src/components/Flick/Review/_review.scss
+++ b/src/components/Flick/Review/_review.scss
@@ -1,8 +1,10 @@
 .review {
   background-color: #ffffff;
-  margin: 30px auto 15px auto;
+  z-index: 6;
+  margin: 0 auto 15px auto;
   width: 90%;
   padding: 20px 0;
+  border-radius: 0 0 10px 10px;
 }
 
 .preview .review {
@@ -23,6 +25,11 @@
 .reviewAuthor {
   font-family: 'Saira', sans-serif;
   font-weight: 500;
+
+  span {
+    font-size: 80%;
+    color: #808080;
+  }
 }
 
 .reviewText {
