--- a/src/components/Flick/Review/_review.scss
+++ b/src/components/Flick/Review/_review.scss
@@ -57,10 +57,15 @@
 
   img {
     display: block;
-    margin: 10px auto;
-    max-width: 500px;
+    margin: 25px auto;
+    max-width: 780px;
+    max-height: 300px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     border-radius: 5px;
+  }
+
+  p img{
+    margin: 0 auto;
   }
 
   blockquote {
