--- a/src/components/Member/MemberMenu/_memberMenu.scss
+++ b/src/components/Member/MemberMenu/_memberMenu.scss
@@ -3,4 +3,20 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+
+  .memberMenuBttn {
+    height: 100px;
+    width: 100px;
+    margin: 20px;
+    font-size: 110%;
+    outline: none;
+    border: thin solid #ffffff;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
+    font-family: 'Saira', sans-serif;
+  }
+
+  .memberMenuBttn:active {
+    border: thin solid #d74898;
+  }
 }
