--- a/src/components/Member/ReviewForm/_reviewForm.scss
+++ b/src/components/Member/ReviewForm/_reviewForm.scss
@@ -83,6 +83,10 @@
     border-bottom: 1px solid #a9a9a9 !important;
   }
 
+  .ql-editor.ql-blank::before {
+    margin-top: 25px;
+  }
+
   .ql-editor {
 
     p {
@@ -93,6 +97,7 @@
       img {
         display: block;
         max-width: 780px;
+        max-height: 400px;
         margin: 10px auto;
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
         border-radius: 5px;
