--- a/src/components/Member/_member.scss
+++ b/src/components/Member/_member.scss
@@ -24,11 +24,31 @@
 
 .username {
   font-family: 'Saira', sans-serif;
-  font-size: 120%;
-  color: #d3d3d3;
   padding: 10px;
   background-color: #304F4E;
   border-radius: 10px 10px 0 0;
+  display: flex;
+  justify-content: space-between;
+
+  h2 {
+    font-size: 120%;
+    color: #d3d3d3;
+  }
+
+  .logout-btn {
+    font-size: 100%;
+    color: #d3d3d3;
+    display: flex;
+    flex-direction: row;
+    border: thin solid #d3d3d3;
+    border-radius: 5px;
+    padding: 5px;
+    
+    i {
+      line-height: 25px;
+      margin-left: 10px;
+    }
+  }
 }
 
 .login {
