--- a/src/components/Home/_home.scss
+++ b/src/components/Home/_home.scss
@@ -2,6 +2,27 @@
   margin-bottom: 64px;
 }
 
+.initMovies {
+  width: 80%;
+  height: 300px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 5px;
+  text-align: center;
+  color: #ffffff;
+  text-shadow: 2px 2px #000000;
+  font-family: 'Ultra', sans-serif;
+  background-color: rgba(0, 0, 0, 0.6);
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  
+  i {
+    font-size: 500%;
+    margin-bottom: 50px;
+  }
+}
+
 .newsContainer {
   display: flex;
   flex-direction: row;
@@ -22,9 +43,12 @@
 .newsItem {
   background-color: #000;
   width: 40%;
+  min-height: 300px;
   border-radius: 10px;
   margin: 15px;
-  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   font-family: 'Saira', sans-serif;
 
@@ -33,14 +57,14 @@
     color: #fff;
   }
 
-  .fi-image{
+  .fi-image {
     width: 100%;
-    border-radius: 10px 10px 0 0;
+    border-radius: 0 0 10px 10px;
   }
 
   .fi-title {
     line-height: 25px;
-    margin: 0 10px;
+    margin: 10px;
 
     a {
       text-decoration: none;
