--- a/src/components/Member/MemberMenu/_memberMenu.scss
+++ b/src/components/Member/MemberMenu/_memberMenu.scss
@@ -20,3 +20,23 @@
     border: thin solid #d74898;
   }
 }
+
+.authError {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
+  p {
+    font-family: 'Saira', sans-serif;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  button {
+    outline: none;
+    width: 100px;
+    margin: 0 auto;
+  }
+}
