--- a/src/components/shared/Menu/_menu.scss
+++ b/src/components/shared/Menu/_menu.scss
@@ -1,20 +1,43 @@
 .menu {
   width: 80%;
-  height: 40px;
+  height: 35px;
   margin: 10px auto;
+  padding-top: 5px;
   background-color: rgba(211, 211, 211, 0.5);
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   border-radius: 10px;
   font-family: 'Saira', sans-serif;
+  transition: 0.3s ease-in-out;
+}
+
+.menu:hover {
+  height: 45px;
+  padding-top: 12px;
+  transition: 0.3s ease-in-out;
+}
+
+.homeMenu-icon {
+  width: 50px;
+  margin: 3px 15px 0 15px;
+
+  i {
+    font-size: 180%;
+    color: #ffffff;
+    padding-left: 10px;
+  }
+  i:hover {
+    font-size: 230%;
+    margin-top: -3px;
+  }
 }
 
 .searchBar {
-  width: 250px;
+  width: 350px;
   height: 30px;
-  margin-top: 5px;
   display: flex;
+  margin: 0 45px;
   flex-direction: row;
   justify-content: flex-start;
   background-color: #fff;
