--- a/src/components/shared/Menu/_menu.scss
+++ b/src/components/shared/Menu/_menu.scss
@@ -9,6 +9,7 @@
   justify-content: flex-start;
   border-radius: 10px;
   font-family: 'Saira', sans-serif;
+  box-shadow: 0 4px 2px -2px gray;
   transition: 0.3s ease-in-out;
 }
 
