adding more styling and error handling functionality

--- a/src/components/Member/ReviewForm/_reviewForm.scss
+++ b/src/components/Member/ReviewForm/_reviewForm.scss
@@ -126,3 +126,21 @@
     }
   }
 }
+
+.validator-modal {
+  position: fixed;
+  z-index: 104;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: rgba(0,0,0,0.5);
+
+  .reviewValidationError {
+    width: 50%;
+    height: 300px;
+    margin: 100px auto;
+    background-color: #a9a9a9;
+    border-radius: 5px;
+  }
+}
