--- a/src/components/Member/_member.scss
+++ b/src/components/Member/_member.scss
@@ -43,6 +43,7 @@
     border: thin solid #d3d3d3;
     border-radius: 5px;
     padding: 5px;
+    cursor: pointer;
     
     i {
       line-height: 25px;
