--- a/src/components/Flick/Review/_review.scss
+++ b/src/components/Flick/Review/_review.scss
@@ -59,13 +59,17 @@
     display: block;
     margin: 25px auto;
     max-width: 780px;
-    max-height: 300px;
+    max-height: 450px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     border-radius: 5px;
   }
 
   p img{
     margin: 0 auto;
+  }
+
+  p.imgContainer {
+    text-align: center;
   }
 
   blockquote {
@@ -76,5 +80,11 @@
     font-family: 'Open Sans', sans-serif;
     font-size: 200%;
     overflow-wrap: normal;
+  }
+
+  @media (max-width: 1100px) {
+    img {
+      max-height: 40vw;
+    }
   }
 }
