--- a/src/components/shared/Menu/_menu.scss
+++ b/src/components/shared/Menu/_menu.scss
@@ -90,6 +90,7 @@
     .search-icons {
       display: none;
       width: 100%;
+      justify-content: center; 
     }
 
     .search-icons.active {
