adding better default review selection on flick mount, and better url handling when switching reviews, fixed styling bugs for review selection menus

--- a/src/components/Flick/_flick.scss
+++ b/src/components/Flick/_flick.scss
@@ -173,20 +173,20 @@
   .double {
     width: 30% !important;
     transition: 0.3s ease-in-out;
+  }
 
-    .selected {
-      width: 70% !important;
-      transition: 0.3s ease-in-out;
-    }
+  .double.selected {
+    width: 70% !important;
+    transition: 0.3s ease-in-out;
   }
 
   .triple {
     width: 20% !important;
     transition: 0.3s ease-in-out;
+  }
 
-    .selected {
-      width: 60% !important;
-      transition: 0.3s ease-in-out;
-    }
+  .triple.selected {
+    width: 60% !important;
+    transition: 0.3s ease-in-out;
   }
 }
