--- a/src/components/App/_app.scss
+++ b/src/components/App/_app.scss
@@ -25,16 +25,19 @@
   position: fixed;
   z-index: 4;
   width: 100%;
-  height: 200px;
-  top: -200px;
+  height: 110px;
+  top: -160px;
   left: 0;
   opacity: 0.0;
-  background: linear-gradient(#d74898, #01ffc4);
+  background: #eeeeee;
   transition: 0.3s ease-in-out;
   display: flex;
   flex-direction: row;
   justify-content: center;
   padding-top: 50px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
 
   .navItem {
     border-radius: 15px;
@@ -43,26 +46,33 @@
     margin: 0 50px;
     height: 95px;
     width: 100px;
-    background-color: rgba(255, 255, 255, 0.4);
 
     h4 {
-      color: #3a3a3a;
+      color: #3e3e3e;
       font-family: 'Saira', sans-serif;
     }
 
     i {
       font-size: 300%;
-      color: #3a3a3a;
+      color: #3e3e3e;
     }
   }
+
+.navItem.active {
+    background-color: rgba(62, 62, 62, 0.2);
 }
 
-.active {
+.navigationMenu:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.navigationMenu.active {
   top: 0 !important;
   opacity: 1.0 !important;
-  z-index: 6 !important;
+  z-index: 99 !important;
   transition: 0.3s ease-in-out;
 }
+
 
 #bottom-color {
   position: fixed;
@@ -76,14 +86,14 @@
 
 .hamburger-button {
   position: fixed;
-  z-index: 7;
+  z-index: 100;
   top: 10px;
   left: 10px;
   width: 40px;
   height: 40px;
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 25px;
-  color: #ffffff;
+  color: #3e3e3e;
   font-size: 150%;
   cursor: pointer;
 
