--- a/src/components/Member/_member.scss
+++ b/src/components/Member/_member.scss
@@ -35,6 +35,23 @@
     color: #d3d3d3;
   }
 
+  .review-btn {
+    font-size: 100%;
+    color: #d3d3d3;
+    display: flex;
+    flex-direction: row;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 5px;
+    background-color: green;
+    text-decoration: none;
+
+    i {
+      line-height: 25px;
+      margin-left: 10px;
+    }
+  }
+
   .logout-btn {
     font-size: 100%;
     color: #d3d3d3;
