--- a/src/components/Flick/Review/_review.scss
+++ b/src/components/Flick/Review/_review.scss
@@ -14,12 +14,19 @@
 .reviewTitle {
   font-family: 'Saira', sans-serif;
   font-weight: 1000;
-  font-size: 170%;
+  line-height: 50px;
+  font-size: 200%;
 }
 
 .reviewHeader {
-  width: 90%;
+  width: 80%;
+  height: 200px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  padding-left: 10%;
 }
 
 .reviewAuthor {
@@ -38,26 +45,38 @@
 
 
   h2 {
-    width: 40%;
+    max-width: 50%;
     border-bottom: 2px solid #D54B97;
     font-family: 'Saira', sans-serif;
-    font-size: 130%;
-    margin: 30px 0;
+    font-size: 150%;
+    margin: 35px 0;
+  }
+
+  h4 {
+    max-width: 75%;
+    font-family: 'Ultra', sans-serif;
+    font-size: 120%;
+    margin: 20px 0; 
+  }
+
+  h5 {
+    font-family: 'Saira', sans-serif;
+    font-size: 110%;
   }
 
   p {
     display: block;
     margin: 25px auto;
     font-family: 'Open Sans', sans-serif;
-    line-height: 25px;
-    font-size: 105%;
+    line-height: 35px;
+    font-size: 115%;
     overflow-wrap: normal;
     word-wrap: break-word;
   }
 
   img {
     display: block;
-    margin: 25px auto;
+    margin: 30px auto;
     max-width: 780px;
     max-height: 450px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -78,8 +97,12 @@
     margin-top: 5px;
     padding-left: 16px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 200%;
+    font-size: 100%;
     overflow-wrap: normal;
+
+    p {
+      font-size: 100% !important;
+    }
   }
 
   @media (max-width: 1100px) {
