--- a/src/components/Member/_member.scss
+++ b/src/components/Member/_member.scss
@@ -41,10 +41,11 @@
     display: flex;
     flex-direction: row;
     border-radius: 5px;
-    cursor: pointer;
     padding: 5px;
     background-color: green;
     text-decoration: none;
+    border: thin solid #a9a9a9;
+    cursor: pointer;
 
     i {
       line-height: 25px;
@@ -148,4 +149,24 @@
       line-height: 40px;
     }
   }
+
+  .authError {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
+  p {
+    font-family: 'Saira', sans-serif;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  button {
+    outline: none;
+    width: 100px;
+    margin: 0 auto;
+  }
+}
 }
