--- a/src/components/Flick/Review/_review.scss
+++ b/src/components/Flick/Review/_review.scss
@@ -20,7 +20,7 @@
 
 .reviewHeader {
   width: 80%;
-  height: 200px;
+  min-height: 200px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
