adding authRoute for securing routes with accessTokens, fixed bugs with links, added styling and animation features

--- a/src/components/Home/_home.scss
+++ b/src/components/Home/_home.scss
@@ -223,6 +223,8 @@
   .itemInfo {
     .reviewMovie {
       font-size: 200% !important;
+      overflow-wrap: break-word;
+      word-break: break-word;
     }
     .reviewTag {
       font-size: 150% !important;
