--- a/src/components/App/_app.scss
+++ b/src/components/App/_app.scss
@@ -9,7 +9,7 @@
   .copyright {
     position: relative;
     left: 0;
-    bottom: 0;
+    bottom: -25px;
     text-align: center;
     font-size: 150%;
     width: 100%;
@@ -113,20 +113,22 @@
 }
 
 .appHeader {
+  z-index: 4;
   width: 100%;
-  z-index: 5;
   height: 200px;
   background: linear-gradient(#d74898, #01ffc4);
-
+  
   .headerLogo {
+    z-index: 5;
     position: absolute;
     width: 275px;
     left: 50vw;
     margin-left: -137.5px;
     cursor: pointer;
   }
-
+  
   .headerSubtitle {
+    z-index: 5;
     position: relative;
     top: 150px;
     font-family: 'Libre Barcode 39 Text', cursive;
@@ -134,6 +136,16 @@
     font-size: 50px;
     text-align: center;
   }
+}
+
+.appHeader.shrink {
+  height: 75px;
+  transition-property: height;
+  transition-duration: 0.75s;
+  transition-timing-function: ease-in-out;
+}
+.appHeader.shrink:hover {
+  height: 200px;
 }
 
 @media(max-width: 450px) {
