--- a/src/components/Flick/Review/_review.scss
+++ b/src/components/Flick/Review/_review.scss
@@ -89,6 +89,8 @@
 
   p.imgContainer {
     text-align: center;
+    position: relative;
+    width: 100%;
   }
 
   blockquote {
@@ -106,8 +108,24 @@
   }
 
   @media (max-width: 1100px) {
-    img {
-      max-height: 40vw;
+    .imgContainer img {
+      width: 100%;
+      left: 0;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    .imgContainer {
+      width: 100vw !important;
+      margin-left: -11.5%;
+
+      img {
+        border-radius: 0 !important;
+      }
+    }
+
+    h2 {
+      max-width: 75%;
     }
   }
 }
