--- a/src/components/Flick/_flick.scss
+++ b/src/components/Flick/_flick.scss
@@ -1,9 +1,14 @@
 .flick {
+  position: absolute;
+  width: 100vw;
+  z-index: 7;
+  background-color: #01ffc4;
   min-height: 300px;
   margin-top: 25px;
 
   .reviewContainer {
-    padding: 10px 0 10px 0; 
+    z-index: 8;
+    padding: 10px 0 10px 0;
     background-color: #000000;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%23222222' points='800 100 0 200 0 800 1600 800 1600 200'/%3E%3Cpolygon fill='%23444444' points='800 200 0 400 0 800 1600 800 1600 400'/%3E%3Cpolygon fill='%23666666' points='800 300 0 600 0 800 1600 800 1600 600'/%3E%3Cpolygon fill='%23888888' points='1600 800 800 400 0 800'/%3E%3Cpolygon fill='%23aaaaaa' points='1280 800 800 500 320 800'/%3E%3Cpolygon fill='%23cccccc' points='533.3 800 1066.7 800 800 600'/%3E%3Cpolygon fill='%23EEE' points='684.1 800 914.3 800 800 700'/%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
@@ -54,7 +59,7 @@
   padding: 15px;
 
   img {
-    max-height: 500px;
+    max-width: 350px;
     border-radius: 5px;
   }
 
@@ -108,8 +113,36 @@
   @media (max-width: 1200px) {
     min-height: 40vw;
 
+  }
+  
+  @media (max-width: 500px) {
+    .header-info {
+      max-width: 250px;
+    }
+    
     img {
-      max-height: 40vw;
+      max-width: 100px;
+      height: 100%;
+    }
+
+    #movie-name {
+      font-size: 200% !important;
+      line-height: 125% !important;
+      overflow-wrap: break-word;
+      word-break: break-word;
+      hyphens: auto;
+    }
+
+    #release-date {
+      margin-top: 0 !important;
+      font-size: 175% !important;
+    } 
+
+    #watch-now {
+      font-size: 100% !important;
+      height: 40px !important;
+      width: 100px !important;
+      line-height: 40px !important;
     }
   }
 }
