adding updates to review components and styling, adding script for netlify deployment

--- a/src/components/Member/ReviewForm/_reviewForm.scss
+++ b/src/components/Member/ReviewForm/_reviewForm.scss
@@ -81,6 +81,7 @@
 
   .ql-toolbar.ql-snow {
     border-bottom: 1px solid #a9a9a9 !important;
+    height: 30px !important;
   }
 
   .ql-editor.ql-blank::before {
